--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-vue-next": "^0.30.3",
     "chart.js": "^4.5.0",
     "pinia": "^3.0.1",
+    "sweetalert2": "^11.22.2",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0"
